--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,58 @@ video {
 
 .topside {
   display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.topside__text {
+  display: grid;
+  grid-column: 1/4;
+  grid-row: 1/2;
+  place-content: center;
+}
+.topside__text p {
+  font-size: 1rem;
+  font-weight: bold;
+}
+.topside__logo {
+  display: grid;
+  grid-column: 2/3;
+  grid-row: 2/3;
+  place-content: center;
 }
 .topside__logo img {
-  min-width: 350px;
-  height: 350px;
+  min-width: 250px;
+  height: 250px;
+}
+.topside a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-column: 2/3;
+  grid-row: 3/4;
+  color: black;
+}
+.topside a .blackline {
+  margin-top: 10px;
+  width: 20%;
+  height: 2px;
+  background-color: black;
+  -webkit-transition: width 0.3s linear;
+  transition: width 0.3s linear;
+}
+.topside a:hover .blackline {
+  width: 75%;
 }/*# sourceMappingURL=style.css.map */
