--- a/css/style.css
+++ b/css/style.css
@@ -51,15 +51,17 @@ video {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 20px;
 }
 .topside__text {
   display: grid;
   grid-column: 1/4;
   grid-row: 1/2;
   place-content: center;
+  padding: 10px;
 }
 .topside__text p {
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: bold;
 }
 .topside__logo {
@@ -72,7 +74,7 @@ video {
   min-width: 250px;
   height: 250px;
 }
-.topside a {
+.topside__portfoliosender {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -88,16 +90,38 @@ video {
           align-items: center;
   grid-column: 2/3;
   grid-row: 3/4;
+}
+.topside__portfoliosender a {
   color: black;
 }
-.topside a .blackline {
-  margin-top: 10px;
+.topside__portfoliosender .blackline {
+  margin-top: 20px;
   width: 20%;
   height: 2px;
   background-color: black;
   -webkit-transition: width 0.3s linear;
   transition: width 0.3s linear;
 }
-.topside a:hover .blackline {
+.topside__portfoliosender:hover .blackline {
   width: 75%;
+}
+
+@media (min-width: 1200px) {
+  .topside p {
+    font-size: 2rem;
+  }
+  .topside img {
+    width: 350px;
+    height: 350px;
+  }
+  .topside__portfoliosender {
+    font-size: 2rem;
+    cursor: pointer;
+  }
+  .topside__portfoliosender .blackline {
+    margin-top: 30px;
+  }
+  .topside__portfoliosender:hover .blackline {
+    width: 80%;
+  }
 }/*# sourceMappingURL=style.css.map */
