--- a/sass/style.scss
+++ b/sass/style.scss
@@ -41,28 +41,25 @@ video {
 	min-width: 100%;
 }
 
-//open side
+//open side Mobile first
 
 .topside {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(3, 1fr);
-
 	align-items: center;
-
-	// gap: 20px;
+	gap: 20px;
 
 	&__text {
 		display: grid;
 		grid-column: 1/4;
 		grid-row: 1/2;
 		place-content: center;
+		padding: 10px;
 		p {
-			font-size: 1rem;
-            font-weight: bold;
+			font-size: 1.1rem;
+			font-weight: bold;
 		}
-		// justify-content: center;
-		// align-items: center;
 	}
 
 	&__logo {
@@ -70,34 +67,61 @@ video {
 		grid-column: 2 / 3;
 		grid-row: 2 / 3;
 		place-content: center;
-		// justify-content: center;
-		// align-items: center;
 		img {
 			min-width: 250px;
 			height: 250px;
 		}
 	}
-	a {
-		// align-items: center;
+	&__portfoliosender {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
 		grid-column: 2/3;
 		grid-row: 3/4;
-        color: black;
+		a {
+			color: black;
+		}
 
 		.blackline {
-			margin-top: 10px;
+			margin-top: 20px;
 			width: 20%;
 			height: 2px;
 			background-color: black;
 			transition: width 0.3s linear;
 		}
 	}
-	a:hover {
+	&__portfoliosender:hover {
 		.blackline {
 			width: 75%;
+		}
+	}
+}
+
+@media (min-width: 1200px) {
+	.topside {
+		
+
+		p {
+			font-size: 2rem;
+		}
+
+		img {
+			width: 350px;
+			height: 350px;
+		}
+		&__portfoliosender {
+			font-size: 2rem;
+			cursor: pointer;
+			.blackline {
+				margin-top: 30px;
+			}
+		}
+
+		&__portfoliosender:hover {
+			.blackline {
+				width: 80%;
+			}
 		}
 	}
 }
