--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,6 @@ p {
 
 body {
   min-height: 100svh;
-  overflow-y: hidden;
-  overflow-x: auto;
   scroll-behavior: smooth;
 }
 
@@ -107,6 +105,13 @@ video {
 }
 
 @media (min-width: 1200px) {
+  body {
+    overflow-y: hidden;
+    overflow-x: auto;
+  }
+  .topside {
+    margin-top: -75px;
+  }
   .topside p {
     font-size: 2rem;
   }
