--- a/css/style.css
+++ b/css/style.css
@@ -121,11 +121,85 @@ video {
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 8px;
 }
+.burger-btn:hover .burger-btn__bars::after,
+.burger-btn:hover .burger-btn__bars::before {
+  width: 100%;
+}
 .burger-btn__box {
   position: relative;
   width: 40px;
   height: 30px;
 }
+.burger-btn__bars, .burger-btn__bars::after, .burger-btn__bars::before {
+  position: absolute;
+  right: 0;
+  height: 3px;
+  content: "";
+  background-color: #ffffff;
+  -webkit-transition: width 0.3s;
+  transition: width 0.3s;
+  background-color: #610909;
+}
+.burger-btn__bars {
+  width: 100%;
+}
+.burger-btn__bars::after {
+  top: 13px;
+  width: 60%;
+}
+.burger-btn__bars::before {
+  top: 27px;
+  width: 30%;
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
+}
+
+.nav {
+  position: fixed;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100svh;
+  width: 100%;
+  background-color: green;
+  background-image: darkgreen;
+  z-index: 100;
+}
+.nav__item {
+  position: relative;
+  display: block;
+  margin: 0.5em 0em;
+  padding: 0.5em 2em;
+  font-size: 2.8rem;
+  color: white;
+}
+.nav__item::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 3px;
+  height: 100%;
+  -webkit-transform: scaleY(0.1);
+          transform: scaleY(0.1);
+  background-color: white;
+  content: "";
+  -webkit-transition: -webkit-transform 0.3s linear;
+  transition: -webkit-transform 0.3s linear;
+  transition: transform 0.3s linear;
+  transition: transform 0.3s linear, -webkit-transform 0.3s linear;
+}
+.nav__item:hover::before {
+  -webkit-transform: scaleY(0.8);
+          transform: scaleY(0.8);
+}
+
 @media (min-width: 1200px) {
   body {
     overflow-y: hidden;
