ad js animation keyframes

--- a/css/style.css
+++ b/css/style.css
@@ -172,8 +172,8 @@ video {
           transform: translateX(100%);
   background-color: green;
   background-image: darkgreen;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+  transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
   z-index: 100;
 }
 .nav--active {
@@ -206,6 +206,32 @@ video {
 .nav__item:hover::before {
   -webkit-transform: scaleY(0.8);
           transform: scaleY(0.8);
+}
+
+@-webkit-keyframes navItemsAnimation {
+  from {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+  }
+  to {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+
+@keyframes navItemsAnimation {
+  from {
+    -webkit-transform: translateX(200%);
+            transform: translateX(200%);
+  }
+  to {
+    -webkit-transform: translateX(0%);
+            transform: translateX(0%);
+  }
+}
+.nav-items-animation {
+  -webkit-animation: navItemsAnimation 1s both;
+          animation: navItemsAnimation 1s both;
 }
 
 @media (min-width: 1200px) {
