--- a/sass/style.scss
+++ b/sass/style.scss
@@ -165,7 +165,8 @@ video {
 	transform: translateX(100%);
 	background-color: green;
 	background-image: darkgreen;
-	transition: 0.5s;
+	transition: 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
+
 	z-index: 100;
 
 	&--active {
@@ -194,6 +195,18 @@ video {
 			transform: scaleY(0.8);
 		}
 	}
+}
+
+@keyframes navItemsAnimation{
+	from{
+		transform: translateX(200%);
+	}
+	to{
+		transform: translateX(0%);
+	}
+}
+.nav-items-animation{
+	animation: navItemsAnimation 1s both;
 }
 
 // Strona ABOUTME
