--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,64 @@ video {
           animation: navItemsAnimation 1s both;
 }
 
+.aboutme-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 100px 1fr 1fr;
+}
+.aboutme-container h1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  font-weight: bold;
+}
+.aboutme-container h1::after {
+  content: "";
+  width: 15%;
+  height: 2px;
+  background-color: black;
+}
+.aboutme-container__selfpictures {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  padding: 0 10px;
+  margin-top: 100px;
+}
+.aboutme-container__selfpictures img {
+  width: 90svw;
+  border-radius: 8px;
+}
+.aboutme-container__description {
+  margin-top: -40px;
+  grid-column: 2/3;
+  grid-row: 3/4;
+  padding: 0 10px;
+  float: start;
+}
+.aboutme-container__description .heading {
+  font-size: 1.7rem;
+  font-weight: bold;
+}
+.aboutme-container__description span {
+  font-weight: bold;
+}
+.aboutme-container__description p {
+  font-size: 1.4rem;
+  margin-bottom: 10px;
+}
+
 @media (min-width: 1200px) {
   body {
     overflow-y: hidden;
