--- a/sass/style.scss
+++ b/sass/style.scss
@@ -251,7 +251,8 @@ video {
 		grid-column: 2/3;
 		grid-row: 3/4;
 		padding: 0 10px;
-		float: start;
+		text-align:justify;
+
 		.heading {
 			font-size: 1.7rem;
 			font-weight: bold;
