--- a/sass/style.scss
+++ b/sass/style.scss
@@ -112,9 +112,11 @@ video {
 	position: fixed;
 	top: 20px;
 	right: 20px;
-	padding: 1em;
-	background: none;
+	padding: .5em;
+	background: #000000b0;
+	
 	border: 1px solid transparent;
+	border-radius: 8px;
 	cursor: pointer;
 	z-index: 1000;
 
@@ -256,10 +258,12 @@ video {
 		grid-column: 2/3;
 		grid-row: 3/4;
 		padding: 0 10px;
-		text-align:justify;
+		letter-spacing: .05em;
+		text-align:left;
+		line-height: 1.6em;
 
 		.heading {
-			font-size: 1.7rem;
+			font-size: 1.6rem;
 			font-weight: bold;
 		}
 		span {
@@ -267,7 +271,7 @@ video {
 		}
 		p {
 			font-size: 1.4rem;
-			margin-bottom: 10px;
+			margin-bottom: 16px;
 		}
 	}
 }
@@ -289,7 +293,7 @@ video {
 		justify-content: center;
 		align-items: center;
 		grid-column: 1 / 2;
-		gap: 10px;
+		// gap: 10px;
 	}
 
 	&__social-media {
