changed letterspacing text aling left  burger button backround

--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ video {
   border-radius: 8px;
   cursor: pointer;
   z-index: 1000;
+  overflow-y: hidden;
 }
 .burger-btn:focus {
   outline: none;
