--- a/css/style.css
+++ b/css/style.css
@@ -240,8 +240,7 @@ video {
 .aboutme-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 100px 75svh 1fr;
-  padding-bottom: 60px;
+  grid-template-rows: 80px 70svh 1fr;
 }
 .aboutme-container h1 {
   display: -webkit-box;
@@ -271,7 +270,7 @@ video {
   grid-column: 2/3;
   grid-row: 1/2;
   padding: 0 10px;
-  margin-top: 100px;
+  margin-top: 25%;
 }
 .aboutme-container__selfpictures img {
   width: 90svw;
