--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ video {
   max-height: 100svh;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
