--- a/sass/style.scss
+++ b/sass/style.scss
@@ -51,7 +51,7 @@ video {
 	max-height: 100svh;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	// grid-template-rows: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
 	align-items: center;
 	gap: 20px;
 	// overflow-y: hidden;
