--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ video {
   background-color: #ffffff;
   -webkit-transition: width 0.3s;
   transition: width 0.3s;
-  background-color: #be9c51;
+  background-color: white;
 }
 .burger-btn__bars {
   width: 100%;
