--- a/css/style.css
+++ b/css/style.css
@@ -244,6 +244,7 @@ video {
   grid-template-rows: 80px 75svh 1fr;
 }
 .aboutme-container h1 {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -268,10 +269,17 @@ video {
   background-color: black;
 }
 .aboutme-container__selfpictures {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   grid-column: 2/3;
-  grid-row: 1/2;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 0 10px;
-  margin-top: 25%;
 }
 .aboutme-container__selfpictures img {
   width: 90svw;
@@ -279,14 +287,14 @@ video {
 }
 .aboutme-container__description {
   grid-column: 2/3;
-  grid-row: 3/4;
   padding: 0 10px;
   letter-spacing: 0.05em;
   text-align: left;
   line-height: 1.6em;
+  margin-bottom: 70px;
 }
 .aboutme-container__description .heading {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: bold;
 }
 .aboutme-container__description span {
@@ -325,6 +333,7 @@ video {
       -ms-flex-align: center;
           align-items: center;
   grid-column: 1/2;
+  gap: 10px;
 }
 .footer__social-media {
   display: -webkit-box;
