--- a/sass/style.scss
+++ b/sass/style.scss
@@ -115,6 +115,7 @@ video {
 	right: 20px;
 	padding: 0.5em;
 	background: #000000b0;
+	// background: none;
 	border: 1px solid transparent;
 	border-radius: 8px;
 	cursor: pointer;
@@ -146,6 +147,7 @@ video {
 		@include burgerBtn;
 		// background-color: #be9c51;
 		background-color: white;
+		// background-color: black;
 	}
 	&__bars {
 		width: 100%;
@@ -224,7 +226,11 @@ video {
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: 80px 75svh 1fr;
 
+
+
+
 	h1 {
+		position: relative;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -232,6 +238,7 @@ video {
 		grid-column: 2/3;
 		grid-row: 1/2;
 		font-weight: bold;
+		
 	}
 	h1::after {
 		// flex-direction: column;
@@ -243,11 +250,14 @@ video {
 
 	&__selfpictures {
 		// position: relative;
-
+display: flex;
 		grid-column: 2/3;
-		grid-row: 1/2;
+		align-items: center;
+		justify-content: center;
+		// grid-row: 1/2;
 		padding: 0 10px;
-		margin-top: 25%;
+		// padding-top: 75px;
+		// margin-top: 25%;
 		// margin: 50px;
 
 		img {
@@ -257,16 +267,19 @@ video {
 	}
 
 	&__description {
+		// top: 0;
+		// bottom: 0;
 		// margin-top: -40px;
 		grid-column: 2/3;
-		grid-row: 3/4;
+		// grid-row: 3/4;
 		padding: 0 10px;
 		letter-spacing: 0.05em;
 		text-align: left;
 		line-height: 1.6em;
+		margin-bottom: 70px;
 
 		.heading {
-			font-size: 1.6rem;
+			font-size: 1.5rem;
 			font-weight: bold;
 		}
 		span {
@@ -296,7 +309,7 @@ video {
 		justify-content: center;
 		align-items: center;
 		grid-column: 1 / 2;
-		// gap: 10px;
+		gap: 10px;
 	}
 
 	&__social-media {
