--- a/sass/style.scss
+++ b/sass/style.scss
@@ -115,7 +115,6 @@ video {
 	right: 20px;
 	padding: 0.5em;
 	background: #000000b0;
-	// background: none;
 	border: 1px solid transparent;
 	border-radius: 8px;
 	cursor: pointer;
@@ -147,7 +146,6 @@ video {
 		@include burgerBtn;
 		// background-color: #be9c51;
 		background-color: white;
-		// background-color: black;
 	}
 	&__bars {
 		width: 100%;
@@ -226,9 +224,6 @@ video {
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: 80px 75svh 1fr;
 
-
-
-
 	h1 {
 		position: relative;
 		display: flex;
@@ -238,10 +233,8 @@ video {
 		grid-column: 2/3;
 		grid-row: 1/2;
 		font-weight: bold;
-		
 	}
 	h1::after {
-		// flex-direction: column;
 		content: '';
 		width: 15%;
 		height: 2px;
@@ -249,17 +242,11 @@ video {
 	}
 
 	&__selfpictures {
-		// position: relative;
-display: flex;
+		display: flex;
 		grid-column: 2/3;
 		align-items: center;
 		justify-content: center;
-		// grid-row: 1/2;
 		padding: 0 10px;
-		// padding-top: 75px;
-		// margin-top: 25%;
-		// margin: 50px;
-
 		img {
 			width: 90svw;
 			border-radius: 8px;
@@ -267,11 +254,7 @@ display: flex;
 	}
 
 	&__description {
-		// top: 0;
-		// bottom: 0;
-		// margin-top: -40px;
 		grid-column: 2/3;
-		// grid-row: 3/4;
 		padding: 0 10px;
 		letter-spacing: 0.05em;
 		text-align: left;
@@ -335,11 +318,9 @@ display: flex;
 @media (min-width: 1200px) {
 	body {
 		overflow-y: hidden;
-		overflow-x: auto;
+		// overflow-x: auto;
 	}
 	.topside {
-		// margin-top: -75px;
-
 		p {
 			font-size: 2rem;
 		}
@@ -364,14 +345,91 @@ display: flex;
 	}
 
 	// NAVIGACJA DESKTOP
+	.burger-btn {
+		display: none;
+	}
+
 	.nav {
-		display: grid;
+		// display: grid;
 		grid-template-columns: repeat(2, 1fr);
-		justify-content: center;
-		align-items: center;
+		// justify-content: center;
+		// align-items: center;
 		position: fixed;
-		width: 100vw;
-		height: 65px;
+		width: 100%;
+		height: 100px;
+		transform: translateX(0);
 		box-shadow: -5px -5px 10px black;
+		top: 0;
+		&__items {
+			grid-row: 2/3;
+		}
+		&__item {
+			display: flex;
+		}
+
+		&__logo {
+			// position: absolute;
+			grid-row: 1/2;
+			img {
+				width: 50px;
+				height: 50px;
+			}
+		}
+	}
+
+	.aboutme-container {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 50px;
+		align-items: end;
+		margin-left: 40px;
+		margin-right: 50px;
+		&__selfpictures {
+			margin-top: 80px;
+			margin-left: 300px;
+
+			img {
+				min-width: 90px;
+				max-height: 70svh;
+				width: 60vh;
+				object-fit: cover;
+				height: auto;
+				vertical-align: middle;
+				font-style: italic;
+				background-repeat: no-repeat;
+				background-size: cover;
+				margin-top: 50px;
+				shape-margin: 1rem;
+				border-radius: 8px;
+				box-shadow: 5px 5px 10px rgb(75, 72, 72);
+			}
+		}
+		&__description {
+		// position: absolute;
+
+		font-family: 'Gruppo', sans-serif;
+		font-size: 1.2rem;
+		// float: right;
+		float: left;
+		margin-right: 100px;
+		h1 {
+			float: left;
+			font-weight: bold;
+		}
+		p {
+			letter-spacing: 2px;
+			float: left;
+			margin-bottom: 2%;
+		}
+	}
+	}
+
+	
+}
+@media (max-width: 1200px){
+	.nav{
+		&__logo{
+			display: none;
+		}
 	}
 }
