--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,21 +48,18 @@ video {
 //open side Mobile first
 
 .topside {
-	max-height: 100svh;
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: repeat(3, 1fr);
-	align-items: center;
-	gap: 20px;
-	// overflow-y: hidden;
-	// 	overflow-x: auto;
+	min-height: 100svh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 
-	&__text {
-		display: grid;
-		grid-column: 1/4;
-		grid-row: 1/2;
-		place-content: center;
-		padding: 10px;
+	&__text,
+	&__logo,
+	&__portfoliosender {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
 		h1 {
 			font-size: 1.8rem;
 			font-weight: bold;
@@ -70,22 +67,13 @@ video {
 	}
 
 	&__logo {
-		display: grid;
-		grid-column: 2 / 3;
-		grid-row: 2 / 3;
-		place-content: center;
 		img {
 			min-width: 250px;
 			height: 250px;
 		}
 	}
 	&__portfoliosender {
-		display: flex;
 		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		grid-column: 2/3;
-		grid-row: 3/4;
 		a {
 			color: black;
 		}
@@ -100,7 +88,7 @@ video {
 	}
 	&__portfoliosender:hover {
 		.blackline {
-			width: 75%;
+			width: 45%;
 		}
 	}
 }
@@ -350,44 +338,56 @@ video {
 	}
 
 	.nav {
+		display: flex;
 		// display: grid;
-		grid-template-columns: repeat(2, 1fr);
+		// grid-template-columns: repeat(12, 1fr);
 		// justify-content: center;
 		// align-items: center;
 		position: fixed;
-		width: 100%;
+		width: 100vw;
 		height: 100px;
 		transform: translateX(0);
 		box-shadow: -5px -5px 10px black;
+		background-color: transparent;
 		top: 0;
+
 		&__items {
-			grid-row: 2/3;
+			display: flex;
+			// flex-direction: row-reverse;
+			// grid-row: 2/3;
+			// display: grid;
+			// grid-column: 7 /12;
 		}
 		&__item {
 			display: flex;
+			color: #000;
+			font-size: 1.8rem;
 		}
 
 		&__logo {
-			// position: absolute;
-			grid-row: 1/2;
+			position: absolute;
+			// grid-row: 1/2;
+			top: 60px;
+			left: 50px;
 			img {
-				width: 50px;
-				height: 50px;
+				width: 75px;
+				height: 75px;
 			}
 		}
 	}
 
 	.aboutme-container {
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		gap: 50px;
-		align-items: end;
-		margin-left: 40px;
-		margin-right: 50px;
-		&__selfpictures {
-			margin-top: 80px;
-			margin-left: 300px;
+		margin-top: 5%;
+		display: flex;
 
+		align-items: end;
+
+		h1 {
+			display: none;
+		}
+		&__selfpictures {
+			margin-left: 300px;
+			margin-right: 50px;
 			img {
 				min-width: 90px;
 				max-height: 70svh;
@@ -405,30 +405,24 @@ video {
 			}
 		}
 		&__description {
-		// position: absolute;
-
-		font-family: 'Gruppo', sans-serif;
-		font-size: 1.2rem;
-		// float: right;
-		float: left;
-		margin-right: 100px;
-		h1 {
-			float: left;
-			font-weight: bold;
-		}
-		p {
-			letter-spacing: 2px;
-			float: left;
-			margin-bottom: 2%;
+			font-family: 'Gruppo', sans-serif;
+			// font-size: 1.2rem;
+			margin-right: 100px;
+			.heading {
+				font-size: 2.5rem;
+				float: left;
+				font-weight: bold;
+			}
+		
+		p{
+			letter-spacing: 4px;
 		}
 	}
 	}
-
-	
 }
-@media (max-width: 1200px){
-	.nav{
-		&__logo{
+@media (max-width: 1200px) {
+	.nav {
+		&__logo {
 			display: none;
 		}
 	}
