--- a/sass/style.scss
+++ b/sass/style.scss
@@ -208,18 +208,17 @@ video {
 
 // Strona ABOUTME
 .aboutme-container {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-template-rows: 80px 75svh 1fr;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 
 	h1 {
-		position: relative;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
-		grid-column: 2/3;
-		grid-row: 1/2;
+		margin: 25px 0 25px 0;
 		font-weight: bold;
 	}
 	h1::after {
@@ -229,11 +228,16 @@ video {
 		background-color: black;
 	}
 
-	&__selfpictures {
+	&__selfpictures,&__description{
 		display: flex;
-		grid-column: 2/3;
 		align-items: center;
 		justify-content: center;
+	}
+
+
+	
+	&__selfpictures {
+		margin-top: 15px;
 		padding: 0 10px;
 		img {
 			width: 90svw;
@@ -241,15 +245,16 @@ video {
 		}
 	}
 
-	&__description {
-		grid-column: 2/3;
-		padding: 0 10px;
+	&__description {			
+		flex-direction: column;
+		padding:  20px;
 		letter-spacing: 0.05em;
 		text-align: left;
 		line-height: 1.6em;
 		margin-bottom: 70px;
 
 		.heading {
+			margin: 20px 0 20px 0;
 			font-size: 1.5rem;
 			font-weight: bold;
 		}
@@ -262,6 +267,7 @@ video {
 		}
 	}
 }
+
 
 .footer {
 	display: grid;
@@ -339,10 +345,6 @@ video {
 
 	.nav {
 		display: flex;
-		// display: grid;
-		// grid-template-columns: repeat(12, 1fr);
-		// justify-content: center;
-		// align-items: center;
 		position: fixed;
 		width: 100vw;
 		height: 100px;
@@ -353,10 +355,7 @@ video {
 
 		&__items {
 			display: flex;
-			// flex-direction: row-reverse;
-			// grid-row: 2/3;
-			// display: grid;
-			// grid-column: 7 /12;
+			
 		}
 		&__item {
 			display: flex;
@@ -366,7 +365,6 @@ video {
 
 		&__logo {
 			position: absolute;
-			// grid-row: 1/2;
 			top: 60px;
 			left: 50px;
 			img {
@@ -377,10 +375,9 @@ video {
 	}
 
 	.aboutme-container {
-		margin-top: 5%;
-		display: flex;
-
-		align-items: end;
+		margin-top: 100px;
+		flex-direction: row;
+		
 
 		h1 {
 			display: none;
@@ -406,11 +403,9 @@ video {
 		}
 		&__description {
 			font-family: 'Gruppo', sans-serif;
-			// font-size: 1.2rem;
 			margin-right: 100px;
 			.heading {
 				font-size: 2.5rem;
-				float: left;
 				font-weight: bold;
 			}
 
