grid delete use flexbox on about me chnaged menu self picture and descritpion

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -310,7 +310,7 @@ video {
 
 @media (min-width: 1200px) {
 	body {
-		overflow-y: hidden;
+		// overflow-y: hidden;
 		// overflow-x: auto;
 	}
 	.topside {
