--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,7 @@ html {
 	// color-scheme: dark light;
 	font-family: 'Cinzel', serif;
 	font-size: 62.5%;
+	scroll-behavior: smooth;
 }
 h1,
 p {
@@ -27,7 +28,6 @@ body {
 	// 	overflow-x: auto;
 
 	// overflow-x: auto;
-	scroll-behavior: smooth;
 }
 li {
 	list-style: none;
@@ -307,7 +307,6 @@ video {
 
 //MediaQuery on Desktop
 
-
 @media (min-width: 1200px) {
 	body {
 		// overflow-y: hidden;
@@ -349,7 +348,7 @@ video {
 		height: 100px;
 		transform: translateX(0);
 		box-shadow: -5px -5px 10px black;
-		background-color: transparent;
+		background-color: white;
 		top: 0;
 
 		&__items {
@@ -415,21 +414,24 @@ video {
 	}
 }
 @media (min-width: 1800px) {
+	.aboutme-container {
+		// position: relative;
+		// grid-template-rows: 50px 1fr 50px;
 
-	.aboutme-container{
-		
 		&__selfpictures {
+			// position: absolute;
 			// margin-left: 300px;
 			// margin-right: 50px;
-			margin-left:  350px;
+			margin-left: 350px;
 			margin-bottom: 150px;
-			
-		
 		}
 		&__description {
 			font-family: 'Gruppo', sans-serif;
 			// margin-right: 100px;
-			
+			// height: 100%;
+			// max-height: 100%;
+			// overflow-y: auto;
+
 			.heading {
 				font-size: 2.5rem;
 				font-weight: bold;
@@ -444,7 +446,7 @@ video {
 			}
 		}
 	}
-	}
+}
 @media (max-width: 1200px) {
 	.nav {
 		&__logo {
